--- a/Format.css
+++ b/Format.css
@@ -198,37 +198,38 @@ align-self: auto;
 }
 h1{
     text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 80px;
     text-align: center;
     color: black;
 }
 h2{
     text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 35px;
     text-align: center;
     color: black;
     padding-bottom: 70px;
+    font-weight: normal;
 }
 
 h3{
     text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
     text-align: center;
     color: black;
 }
 h4{
     text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 23px;
     text-align: center;
     color: #b70101;
 }
 h5{
     text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 24px;
     text-align: center;
     color: black;
@@ -236,7 +237,7 @@ h5{
 }
 p {
     text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 23px;
     text-align: center;
     color: black;
@@ -284,8 +285,9 @@ p {
 .backgroundIMG h3 span {
     color: white; 
     font-size: 24px;
-    font-family: 'Lato';
+    font-family: 'Lato', sans-serif;
    line-height: 30px;
+   font-weight: normal;
 }
 .backgroundIMG h3 span.spacer {
     padding: 0 5px;
@@ -654,6 +656,15 @@ align-content: flex-start;
   margin: 0 auto;
   margin-bottom: 20px;
   height: 500px;
+  }
+  .twoColumnFlexHorizontalwords {
+     display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+     /*display: block;*/
+  margin: 0 auto;
   }
  .columnOneHorizontal img {
   display: block;
