--- a/Format.css
+++ b/Format.css
@@ -626,7 +626,14 @@ align-content: flex-start;
 
   /*FOR MOBILE*/
 @media (max-width: 500px){
-
+#contactImage img {
+    padding-bottom: 50px;
+    width: 99%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
    .footerList a {
     font-size: 12px;
     line-height: 10px;
