--- a/Format.css
+++ b/Format.css
@@ -27,6 +27,74 @@ body {
 
 
 */
+
+/* Style the list */
+ul.tab {
+    list-style-type: none;
+    margin: 0 auto;
+    display: block;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    width: 200px;
+    border-radius: 10px;
+}
+
+/* Float the list items side by side */
+ul.tab li {
+  float: left;
+}
+
+/* Style the links inside the list items */
+ul.tab li a {
+    display: inline-block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+/* Change background color of links on hover */
+ul.tab li a:hover {background-color: #ddd;}
+
+/* Create an active/current tablink class */
+ul.tab li a:focus, .active {background-color: #ccc;}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+
+
+.tabcontent {
+    -webkit-animation: fadeEffect 1s;
+    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
+
+@-webkit-keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+
+
+
+
+
+
+
 .footerList p {
   color: white;
 }
@@ -385,6 +453,29 @@ background-color: #b70101;
   
   -webkit-flex-flow: row wrap;
   justify-content: space-around
+}
+
+.speakerContainer {
+   padding: 0;
+  flex-direction: column;
+  list-style: none;
+  
+   display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: center;
+}
+.speaker {
+    background: none;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+  width: 900px;
 }
 .execMember img {
     width: 210px;
