--- a/Format.css
+++ b/Format.css
@@ -176,7 +176,7 @@ ul.tab li a:focus, .active {background-color: #ccc;}
     text-align: right;
     padding: 30px;
     text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 23px;
     font-weight: normal;
 }
@@ -309,21 +309,21 @@ align-self: auto;
 }
 #title{
     text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 45px;
     text-align: center;
     color: #b70101;
 }
 h1{
     text-decoration: none;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 80px;
     text-align: center;
     color: black;
 }
 h2{
     text-decoration: none;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 35px;
     text-align: center;
     color: black;
@@ -333,21 +333,21 @@ h2{
 
 h3{
     text-decoration: none;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     text-align: center;
     color: black;
 }
 h4{
     text-decoration: none;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 23px;
     text-align: center;
     color: #b70101;
 }
 h5{
     text-decoration: none;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 24px;
     text-align: center;
     color: black;
@@ -355,7 +355,7 @@ h5{
 }
 p {
     text-decoration: none;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 23px;
     text-align: center;
     color: black;
@@ -365,7 +365,7 @@ p {
 }
 #mainText{
      text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 25px;
     text-align: center;
     color: black;
@@ -403,7 +403,7 @@ p {
 .backgroundIMG h3 span {
     color: white; 
     font-size: 24px;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
    line-height: 30px;
    font-weight: normal;
 }
@@ -578,7 +578,7 @@ align-content: flex-start;
 }
 .footerList a{
    text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     text-align: center;
     color: white;
@@ -593,7 +593,7 @@ align-content: flex-start;
 }
 .footerListWords a {
       text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     text-align: center;
     color: white;
@@ -1028,7 +1028,7 @@ p {
     text-align: right;
     padding: 5px;
     text-decoration: none;
-    font-family: 'Lato', serif;
+    font-family: 'Montserrat', sans-serif;
 }
 .paragraph{
     margin-right: 0;
