--- a/Format.css
+++ b/Format.css
@@ -1,6 +1,73 @@
 /*<link rel="stylesheet" href="http://domain.tld/mobile.css" type="text/css" media="handheld" />
 necessary?
 */
+.leftSwitch{
+  display: inline-block;
+  color: white;
+  text-align: center;
+  background-color: black;
+  height: 45px;
+  width: 45px;
+  line-height: 45px;
+  border-radius: 50%;
+  border: 1px solid black;
+  font-size: 24px;
+  cursor: pointer;
+  margin: 20px;
+}
+.rightSwitch {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  background-color: black;
+  height: 45px;
+  width: 45px;
+  line-height: 45px;
+  border-radius: 50%;
+  border: 1px solid black;
+  font-size: 24px;
+  cursor: pointer;
+  margin: 20px;
+}
+.mySlides {
+  height: 400px;
+  width: 70%;
+  display: block;
+  margin: 0 auto;
+
+}
+.select{
+  display:inline-block;
+  border-radius:  50%;
+  background-color: transparent;
+   border: 1px solid black;
+  height: 10px;
+  width: 10px;
+  color: black;
+  font-size: 10px;
+  z-index: 1;
+  text-align: center;
+  background-position: 50% 50%;
+  margin: 5px;
+  cursor: pointer;
+}
+.select:hover{
+  background-color: #e62b1e;
+   transition: all .3s linear;
+}
+.select:active{
+  background-color: #e62b1e;
+}
+.photos {
+  text-align: center;
+}
+
+
+
+
+
+
+
 body {
     background-color: white;
     
