--- a/Format.css
+++ b/Format.css
@@ -51,17 +51,17 @@ necessary?
   margin: 5px;
   cursor: pointer;
 }
-.select:hover{
+/*.select:hover{
   background-color: #e62b1e;
    transition: all .3s linear;
-}
+}*/
 .select:active{
   background-color: #e62b1e;
 }
 .photos {
   text-align: center;
 }
-
+span.active {background-color: #e62b1e; }
 
 
 
