--- a/Format.css
+++ b/Format.css
@@ -575,6 +575,13 @@ p {
     width: 100%;
 
 }
+body p {
+      color: black; 
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+   line-height: 30px;
+   font-weight: normal;
+}
 .backgroundIMG h3 span {
     color: white; 
     font-size: 24px;
