--- a/Format.css
+++ b/Format.css
@@ -1162,11 +1162,10 @@ align-self: center;
   }
 #contactImage img{
     padding-bottom: 10px;
-    width: 99%;
+    width: 100%;
     height: auto;
     display: block;
-    margin-left: auto;
-    margin-right: auto
+    margin: 0 auto;
 }
 }
 @media handheld {
