add carasol and images

--- a/Format.css
+++ b/Format.css
@@ -98,7 +98,7 @@ display: none;}
 }
 .mySlides {
   height: auto;
-  width: 90%;
+  width: 70%;
   display: block;
   margin: 0 auto;
 
@@ -910,7 +910,7 @@ align-content: flex-start;
 }
 @media (max-width: 1180px) {
     .mySlides {
-  height: 50%;
+  height: 55%;
   width: 70%;
   display: block;
   margin: 0 auto;
@@ -1031,7 +1031,16 @@ align-content: flex-start;
 }
 
 
+@media (max-width: 550px){
+    .mySlides {
+  height: auto;
+  width: 90%;
+  display: block;
+  margin: 0 auto;
 
+
+}
+}
 
 
 
@@ -1039,13 +1048,33 @@ align-content: flex-start;
 
   /*FOR MOBILE*/
 @media (max-width: 500px){
-  .mySlides {
-  height: 150px;
-  width: 90%;
-  display: block;
-  margin: 0 auto;
-
-
+  .leftSwitch{
+  display: inline-block;
+  color: white;
+  text-align: center;
+  background-color: black;
+  height: 25px;
+  width: 25px;
+  line-height: 25px;
+  border-radius: 50%;
+  border: 1px solid black;
+  font-size: 17px;
+  cursor: pointer;
+  margin: 5px;
+}
+.rightSwitch {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  background-color: black;
+  height: 25px;
+  width: 25px;
+  line-height: 25px;
+  border-radius: 50%;
+  border: 1px solid black;
+  font-size: 17px;
+  cursor: pointer;
+  margin: 5px;
 }
   #contactForm{
   background-color: white;
