--- a/Format.css
+++ b/Format.css
@@ -1,10 +1,51 @@
 /*<link rel="stylesheet" href="http://domain.tld/mobile.css" type="text/css" media="handheld" />
 necessary?
 */
+hr
+{
+	display: block;
+	content: "";
+	display: block;
+	margin: 0px auto 2rem;
+	background-color: #5c6c73;
+	width: 5vw;
+	height: 0.50vw;
+	margin-top: -20px;
+	border: transparent;
+
+}
+.light{
+  color: white;
+}
+.dark
+{
+	display: block;
+	content: "";
+	display: block;
+	margin: 0px auto 2rem;
+	background-color: #F4F7F7;
+	width: 5vw;
+	height: 0.50vw;
+	margin-top: -20px;
+}
+.sectionOne
+{
+	background-color: #5c6c73;
+   	display:inline-block;
+   	vertical-align: top;
+   	width: 100%;
+}
+.sectionOne p
+{
+	text-align: center;
+	max-width: 50%;
+	line-height: 1.5;
+	margin: 0 auto;
+}
 header{
-  width:100%; 
-  background:#e62b1e; 
-  height:60px; 
+  width:100%;
+  background:#e62b1e;
+  height:60px;
   line-height:60px;
   text-align:center;
   display: block;
@@ -45,9 +86,9 @@ display: none;}
 #menu a:hover{text-decoration:none; color:white;}
 
 .glyphicon-home{
-  color:white; 
-  font-size:1.5em; 
-  margin-top:5px; 
+  color:white;
+  font-size:1.5em;
+  margin-top:5px;
   margin:0 auto;
 }
 
@@ -138,7 +179,7 @@ span.active {background-color: #e62b1e; }
 
 body {
     background-color: white;
-    
+
 }
 /*
 .tint {
@@ -180,13 +221,13 @@ body {
   padding: 0;
   margin: 0;
   list-style: none;
-  
+
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  
+
   -webkit-flex-flow: row wrap;
   justify-content: space-around;
 }
@@ -326,7 +367,9 @@ ul.tab {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
-    width: 265px;
+    width: 50%;
+    max-width: 100%;
+
     border-radius: 10px;
     list-style: none;
 
@@ -465,7 +508,7 @@ iframe {
 }
 .mainMenu {
     list-style: none;
-    margin: 0; 
+    margin: 0;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-end;
@@ -477,13 +520,13 @@ iframe {
  padding: 0;
   margin:0;
   list-style: none;
-  
+
   /*display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;*/
   display: flex;
-  
+
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
@@ -522,18 +565,18 @@ align-self: auto;
 }
 @media all and (max-width: 1600px) {
   .mainMenu {
-    text-align: center; 
+    text-align: center;
     justify-content: space-around;
     align-content: center;
   }
 }
 
 #hero{
-  line-height: .5; 
+  line-height: .5;
   position: relative;
 }
 #hero img {
-    width: 100%; 
+    width: 100%;
     height: auto;
     display: block;
     margin: 0 auto;
@@ -631,7 +674,7 @@ p {
     height: auto;
 }
 .backgroundIMG img {
-    width: 100%; 
+    width: 100%;
     height: auto;
 }
 .backgroundIMG h3 {
@@ -641,14 +684,14 @@ p {
 
 }
 body p {
-      color: black; 
+      color: black;
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
    line-height: 30px;
    font-weight: normal;
 }
 .backgroundIMG h3 span {
-    color: white; 
+    color: white;
     font-size: 24px;
     font-family: 'Montserrat', sans-serif;
    line-height: 30px;
@@ -658,7 +701,7 @@ body p {
     padding: 0 5px;
 }
 
-.paragraph { 
+.paragraph {
     margin-left: 100px;
     margin-right: 100px;
     width: auto;
@@ -709,7 +752,7 @@ flex-basis: auto;
 flex: 0 1 auto;
 align-self: auto;
 background-color: #e62b1e;
-} 
+}
 .twoColumnFlexVertical p {
   color: white;
   font-family: 'Montserrat', sans-serif;
@@ -747,13 +790,13 @@ background-color: #e62b1e;
   margin-left: 250;
   margin-right: 250;
   list-style: none;
-  
+
    display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  
+
   -webkit-flex-flow: row wrap;
   justify-content: space-around
 }
@@ -762,13 +805,13 @@ background-color: #e62b1e;
    padding: 0;
   flex-direction: column;
   list-style: none;
-  
+
    display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  
+
   -webkit-flex-flow: row wrap;
   justify-content: center;
 }
@@ -778,7 +821,8 @@ background-color: #e62b1e;
   font-weight: bold;
   font-size: 3em;
   text-align: center;
-  width: 900px;
+  width: 90%;
+  height: auto;
 }
 .execMember img {
     width: 210px;
@@ -790,7 +834,7 @@ background-color: #e62b1e;
   width: 210px;
   height: 200px;
   margin-top: 10px;
-  
+
   line-height: 150px;
   color: black;
   font-weight: bold;
@@ -813,7 +857,7 @@ flex-basis: auto;
 flex: 0 1 auto;
 align-self: auto;
 margin-left: 0px;
-} 
+}
 .twoColumnFlexHorizontal{
 display: flex;
 flex-direction: row;
@@ -861,7 +905,13 @@ align-content: flex-start;
     justify-content: flex-start;
     align-content: stretch;
 }
-
+.speakerimg{
+  display: block;
+  margin: 0 auto;
+  height: 40%;
+  width: auto;
+max-width: 100%;
+}
 #contactImage img {
     padding-bottom: 50px;
     max-width: 70%;
@@ -872,7 +922,13 @@ align-content: flex-start;
 }
 
 @media (max-width: 862px){
-
+  .sectionOne p
+  {
+  	text-align: center;
+  	max-width: 90%;
+  	line-height: 1.5;
+  	margin: 0 auto;
+  }
     h2 {
     padding-bottom: 0px;
 }
@@ -903,6 +959,21 @@ align-content: flex-start;
     h2 {
     padding-bottom: 0px;
 }
+ul.tab {
+    list-style-type: none;
+    margin: 0 auto;
+    display: block;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    width: 90%;
+    max-width: 100%;
+
+    border-radius: 10px;
+    list-style: none;
+
+}
     .aboutBody img{
         height: 325px;
         width: auto;
@@ -920,7 +991,7 @@ align-content: flex-start;
     width: 100%;
   }
      .backgroundIMG img {
-      
+
         width: 60%;
         display: block;
         margin: 0 auto;
@@ -948,16 +1019,16 @@ align-content: flex-start;
   margin-left: 100;
   margin-right: 100;
   list-style: none;
-  
+
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  
+
   -webkit-flex-flow: row wrap;
   justify-content: space-around
-} 
+}
 }
 /*@media (min-width: 1300px){
     #hero img {
@@ -965,6 +1036,7 @@ align-content: flex-start;
     }
 }*/
 @media (max-width: 980px){
+
   #nav{
     display: none;
   }
@@ -978,7 +1050,7 @@ align-content: flex-start;
     width: 100%;
   }
     .backgroundIMGsmall img {
-        
+
         display: none;
     }
     .backgroundIMG img {
@@ -1052,8 +1124,13 @@ align-content: flex-start;
   width: 90%;
   display: block;
   margin: 0 auto;
-
-
+}
+.speakerimg{
+  display: block;
+  margin: 0 auto;
+  height: 30%;
+  width: auto;
+max-width: 100%;
 }
 }
 
@@ -1140,9 +1217,9 @@ margin: 0 auto;
     line-height: 10px;
   }
   #nav li a {
-   
+
     padding: 10px;
-   
+
 }
   .backgroundIMG{
     height: 600px;
@@ -1194,7 +1271,7 @@ margin: 0 auto;
     display: none;
   }
 
- 
+
   .top {
     order: 1;
    flex-basis: auto;
@@ -1338,7 +1415,7 @@ align-self: center;
 h2 {
     padding-bottom: 0px;
 }
- 
+
 p {
     margin-left: 0;
     margin-right: 0;
@@ -1409,13 +1486,13 @@ h2{
       object-fit: cover;
       object-position: 0% 20%;
       /*the defualt was at 400px for max-height*/
-      max-height: 450px; 
+      max-height: 450px;
     }
     .mySlides {
   object-fit: cover;
       object-position: 0% 20%;
       /*the defualt was at 400px for max-height*/
-      max-height: 450px; 
+      max-height: 450px;
 
 }
 }
