--- a/Format.css
+++ b/Format.css
@@ -823,6 +823,8 @@ background-color: #e62b1e;
   text-align: center;
   width: 90%;
   height: auto;
+  padding-bottom: 90px;
+
 }
 .execMember img {
     width: 210px;
